--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-router-validator",
   "version": "1.0.0",
   "description": "Activate repo for Express Routers and Validator - W7D4",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js"
   },
